2008-03-25  Mark Ellis  <mark@mpellis.org.uk>

	* fixed input buffer length in tools/rapiconfig.c
	* fixed rapi1 CeProcessConfig (after a fashion)

2008-03-23  Guido Diepen  <guido@guidodiepen.nl>

	* Rewrote the thread-safe code to make use of pthread_once. Instead of
	using my own mutexes to ensure a key for the TSL was only created once, I
	now use pthread_once to ensure that the create_key method is called only
	once. Thanks David for pointing this out.

2008-03-23  Guido Diepen  <guido@guidodiepen.nl>

	* Renabled the thread-safe code. Segfaults in sync-engine were
	  caused by the fact that sync-engine tried to access rapi_context of 
	  one thread via another thread. Resolved in sync-engine

      became less stable with this. 
2008-03-23  Guido Diepen  <guido@guidodiepen.nl>

	* Put the thread-safety code in ifdef. Turned out that sync-engine
      became less stable with this. 
      Currently thread-safe code has been deactivated till further notice.

2008-03-20  Mark Ellis  <mark@mpellis.org.uk>

	* BSD compatible fixes suggested by Bakulin Ilya, many thanks

2008-03-15  Guido Diepen  <guido@guidodiepen.nl>

	* Made librapi2 thread-safe by removing the static RapiContext. This is
	  replaced by pthreads thread local storage. 

2008-01-11  Guido Diepen  <guido@guidodiepen.nl>

	* Added a non-blocking CeWriteFile (it will release GIL before starting)
	* Added a non-blocking CeProcessConfig ( not used yet though )

2008-01-11  Guido Diepen  <guido@guidodiepen.nl>

	* Increased the timeout used for reading data from the socket. Old value
	  of 15 was causing too many timeouts. New value is set to 120 seconds.

2008-01-09  Mark Ellis  <mark@mpellis.org.uk>

	* added LICENSE to EXTRA_DIST
	* added hal support to rapi_context

2008-01-07  Guido Diepen  <guido@guidodiepen.nl>

	* Fixed small bug in raising error in closeHandle function
	* Added python binding for CeGetSystemInfo
	* Added python binding for CeGetVersionEx
